Acessos ao suporte

--- a/grupo/Sites/public/adm/suporte.html
+++ b/grupo/Sites/public/adm/suporte.html
@@ -26,12 +26,16 @@
                     <img src="../src/Logo-icon.png" alt="TroustSolutions">
                     <h2><span>Troust</span>Solutions</h2>
                 </div>
-                <div class="links">
-                    <a href="./dashborad.html">Home</a>
-                </div>
                 <div class="links links-ativo">
-                    <a href="./dash-tanque.html">Tanque</a>
+                    <a href="./suporte.html">Home</a>
                 </div>
+                <div class="links">
+                    <a href="#" download="documentacao">Documentação</a>
+                </div>
+                <div class="links">
+                    <a href="#">Manual de instalação</a>
+                </div>
+                
             </div>
             <div class="sair links">
                 <a href="../index.html">
@@ -46,8 +50,6 @@
                 <div>
                     <h1>Suporte</h1>
                 </div>
-            </div>
-            <div class="area-nome">
             </div>
             <div class="area-cards">
                 <div class="card jira-card">
