--- a/grupo/Sites/public/index.html
+++ b/grupo/Sites/public/index.html
@@ -286,7 +286,7 @@
                 <div class="coluna">
                     <h3>Soluções</h3>
                     <p><a href="#">comercial@troustsolutions.com</a></p>
-                    <p><a href="#">Sensor de temperatura</a></p>
+                    <p><a href="https://troustsolutions.atlassian.net/servicedesk/customer/portals" target="_blank">Central de atendimento</a></p>
                     <p><a href="#">Calculadora Financeira</a></p>
                 </div>
 
