--- a/grupo/Sites/public/adm/suporte.html
+++ b/grupo/Sites/public/adm/suporte.html
@@ -113,7 +113,9 @@
                 <div class="area-ipt">
                     <div class="ipt">
                         <input type="text" id="ipt_msg">
-                        <img onclick="enviarPergunta()" src="../src/mandar.png" alt="Enviar">
+                        <button onclick="enviarPergunta()">
+                            <img src="../src/mandar.png" alt="Enviar">
+                        </button>
                     </div>
                 </div>
             </div>
