--- a/grupo/Sites/public/Dash/dash-tanque.html
+++ b/grupo/Sites/public/Dash/dash-tanque.html
@@ -120,10 +120,12 @@
         }, 5000)
     }
 
+    let proximaAtualizacao;
+    var fkEmpresa = sessionStorage.FK_EMPRESA
+
     // carregar tanques e exibição
     function carregarTanques() {
         console.log('buscar tanques')
-        var fkEmpresa = sessionStorage.FK_EMPRESA
         fetch(`/tanques/tanquesEmpresa/${fkEmpresa}`, { cache: "no-store" })
             .then(function (response) {
                 if (response.ok) {
@@ -200,7 +202,6 @@
     // alerta tanque
     function alertaTanque() {
         console.log('buscar alertas')
-        var fkEmpresa = sessionStorage.FK_EMPRESA
         fetch(`/tanques/alertaTanque/${fkEmpresa}`, { cache: "no-store" })
             .then(function (resposta) {
                 if (resposta.ok) {
@@ -229,7 +230,6 @@
     // modais
     function abrirModal(fkTanque) {
         var idTanque = fkTanque
-        var fkEmpresa = sessionStorage.FK_EMPRESA
         console.log(idTanque, fkEmpresa)
         fetch("/tanques/estatisticasTanques", {
             method: "POST",
@@ -302,9 +302,6 @@
                     <div class="grafico-principal grafico-modal">
                         <canvas id="grafico1" width="700px"></canvas>
                     </div>
-                    <div class="grafico-terciario grafico-modal">
-                        <canvas id="grafico3" width="400px"></canvas>
-                    </div>
                 </div>
             </div>
         </div>
@@ -312,12 +309,15 @@
         modal.style.display = 'flex'
         modal.innerHTML = cardEstatistica
 
-        gerarGraficoModal(t, idTanque);
+        obterDadosGrafico(idTanque);
 
     }
 
-    function gerarGraficoModal(tanque, idTanque) {
-        var fkEmpresa = sessionStorage.FK_EMPRESA
+    function obterDadosGrafico(idTanque) {
+
+        if (proximaAtualizacao != undefined) {
+            clearTimeout(proximaAtualizacao);
+        }
 
         fetch("/tanques/gerarGrafico", {
             method: "POST",
@@ -331,54 +331,135 @@
         })
             .then(function (response) {
                 if (response.ok) {
-                    response.json().then(
-                        function (resposta) {
-                            console.log("resposta")
-                            console.log(JSON.stringify(resposta))
+                    response.json().then(function (resposta) {
+                        console.log(`Dados recebidos: ${JSON.stringify(resposta)}`);
+                        resposta.reverse();
 
-                            tratativaDados(tanque, resposta, idTanque);
-                        }
-                    )
+                        plotarGrafico(resposta, idTanque);
+
+                    });
+                } else {
+                    console.error('Nenhum dado encontrado ou erro na API');
                 }
             })
+            .catch(function (error) {
+                console.error(`Erro na obtenção dos dados p/ gráfico: ${error.message}`);
+            });
     }
 
-    function tratativaDados(tanque, resposta, idTanque) {
-        var dados = []
-        var labels = []
+    // Esta função *plotarGrafico* usa os dados capturados na função anterior para criar o gráfico
+    // Configura o gráfico (cores, tipo, etc), materializa-o na página e, 
+    // A função *plotarGrafico* também invoca a função *atualizarGrafico*
+    function plotarGrafico(resposta, idTanque) {
 
-        for (var i = 0; i < resposta.length; i++) {
-            dados.push(resposta[i].mediaTanque)
-            labels.push(resposta[i].ultimaColeta)
+        console.log('iniciando plotagem do gráfico...');
+
+        // Criando estrutura para plotar gráfico - labels
+        let labels = [];
+
+        // Criando estrutura para plotar gráfico - dados
+        let dados = {
+            labels: labels,
+            datasets: [{
+                label: 'Temperatura',
+                data: [],
+                fill: false,
+                borderColor: 'rgb(199, 52, 52)',
+                tension: 0.1
+            }]
+        };
+
+        console.log('----------------------------------------------')
+        console.log('Estes dados foram recebidos pela funcao "obterDadosGrafico" e passados para "plotarGrafico":')
+        console.log(resposta)
+
+        // Inserindo valores recebidos em estrutura para plotar o gráfico
+        for (i = 0; i < resposta.length; i++) {
+            var registro = resposta[i];
+            labels.push(registro.ultimaColeta);
+            dados.datasets[0].data.push(registro.mediaTanque);
         }
 
-        new Chart(document.getElementById("grafico1"), {
-            type: 'line',
-            data: {
-                labels: labels,
-                datasets: [{
-                    label: 'TEMPERATURA DO TANQUE',
-                    data: dados,
-                    borderWidth: 3
-                }]
-            },
-            options: {
-                plugins: {
-                    title: { display: true, text: tanque.nometanque }
-                }
-            }
-        });
+        console.log('----------------------------------------------')
+        console.log('O gráfico será plotado com os respectivos valores:')
+        console.log('Labels:')
+        console.log(labels)
+        console.log('Dados:')
+        console.log(dados.datasets)
+        console.log('----------------------------------------------')
 
-        new Chart(document.getElementById("grafico3"), {
-            type: 'pie',
-            data: {
-                labels: ['Min', 'Média', 'Max'],
-                datasets: [{
-                    data: [tanque.configMinTemp, tanque.mediaTanque, tanque.configMaxTemp],
-                    borderWidth: 2
-                }]
+        // Criando estrutura para plotar gráfico - config
+        const config = {
+            type: 'line',
+            data: dados,
+        };
+
+        // Adicionando gráfico criado em div na tela
+        let myChart = new Chart(
+            document.getElementById(`grafico1`),
+            config
+        );
+
+        setTimeout(() => atualizarGrafico(idTanque, dados, myChart), 2000);
+    }
+
+
+    // Esta função *atualizarGrafico* atualiza o gráfico que foi renderizado na página,
+    // buscando a última medida inserida em tabela contendo as capturas, 
+
+    //     Se quiser alterar a busca, ajuste as regras de negócio em src/controllers
+    //     Para ajustar o "select", ajuste o comando sql em src/models
+    function atualizarGrafico(idTanque, dados, myChart) {
+
+        fetch(`/medidas/tempo-real/${idTanque}/${fkEmpresa}`, { cache: 'no-store' }).then(function (response) {
+            if (response.ok) {
+                response.json().then(function (novoRegistro) {
+
+                    // alertar(novoRegistro, idTanque);
+                    console.log(`Dados recebidos: ${JSON.stringify(novoRegistro)}`);
+                    console.log(`Dados atuais do gráfico:`);
+                    console.log(dados);
+
+
+                    if (novoRegistro[0].ultimaColeta == dados.labels[dados.labels.length - 1]) {
+                        console.log("---------------------------------------------------------------")
+                        console.log("Como não há dados novos para captura, o gráfico não atualizará.")
+                        console.log("Horário do novo dado capturado:")
+                        console.log(novoRegistro[0].ultimaColeta)
+                        console.log("Horário do último dado capturado:")
+                        console.log(dados.labels[dados.labels.length - 1])
+                        console.log("---------------------------------------------------------------")
+                    } else {
+                        if(dados.length > 7){
+
+                            // tirando e colocando valores no gráfico
+                            dados.labels.shift(); // apagar o primeiro
+                            dados.labels.push(novoRegistro[0].ultimaColeta); // incluir um novo momento
+                            
+                            dados.datasets[0].data.shift();  // apagar o primeiro de umidade
+                            dados.datasets[0].data.push(novoRegistro[0].mediaTanque); // incluir uma nova medida de umidade
+                            
+                        }else{
+                            dados.labels.push(novoRegistro[0].ultimaColeta); // incluir um novo momento
+                            dados.datasets[0].data.push(novoRegistro[0].mediaTanque); // incluir uma nova medida de umidade
+
+                        }
+                            myChart.update();
+                    }
+
+                    // Altere aqui o valor em ms se quiser que o gráfico atualize mais rápido ou mais devagar
+                    proximaAtualizacao = setTimeout(() => atualizarGrafico(idTanque, dados, myChart), 2000);
+                });
+            } else {
+                console.error('Nenhum dado encontrado ou erro na API');
+                // Altere aqui o valor em ms se quiser que o gráfico atualize mais rápido ou mais devagar
+                proximaAtualizacao = setTimeout(() => atualizarGrafico(idTanque, dados, myChart), 2000);
             }
-        });
+        })
+            .catch(function (error) {
+                console.error(`Erro na obtenção dos dados p/ gráfico: ${error.message}`);
+            });
+
     }
 
     // alteração
