--- a/grupo/Sites/public/adm/suporte.html
+++ b/grupo/Sites/public/adm/suporte.html
@@ -30,10 +30,10 @@
                     <a href="./suporte.html">Home</a>
                 </div>
                 <div class="links">
-                    <a href="#" download="documentacao">Documentação</a>
+                    <a href="truticultura documentação (1).pdf" download="documentacao">Documentação</a>
                 </div>
                 <div class="links">
-                    <a href="#">Manual de instalação</a>
+                    <a href="Design sem nome (1).pdf" download="Manual">Manual de instalação</a>
                 </div>
                 
             </div>
