dash Principal dinamica com view

--- a/grupo/Sites/public/Dash/dashborad.html
+++ b/grupo/Sites/public/Dash/dashborad.html
@@ -152,8 +152,6 @@
     //   clearTimeout(proximaAtualizacao);
     // }
 
-
-
     fetch(`/medidas/ultimas/${fkEmpresa}`, { cache: 'no-store' }).then(function (response) {
       if (response.ok) {
         response.json().then(function (resposta) {
@@ -280,7 +278,8 @@
       document.getElementById(`grafico`),
       config
     );
-    // setTimeout(() => atualizarGrafico(dados, myChart), 2000);
+
+    setTimeout(() => atualizarGrafico(dados, myChart), 2000);
   }
 
 
@@ -291,52 +290,44 @@
   //     Para ajustar o "select", ajuste o comando sql em src/models
   function atualizarGrafico(dados, myChart) {
 
-
-
-    fetch(`/medidas/tempo-real/`, { cache: 'no-store' }).then(function (response) {
+    fetch(`/medidas/principal/${fkEmpresa}`, { cache: 'no-store' }).then(function (response) {
       if (response.ok) {
         response.json().then(function (novoRegistro) {
 
-          obterdados(idAquario);
-          // alertar(novoRegistro, idAquario);
+          // alertar(novoRegistro, idTanque);
           console.log(`Dados recebidos: ${JSON.stringify(novoRegistro)}`);
           console.log(`Dados atuais do gráfico:`);
           console.log(dados);
+          var dadosAtualizados = false;
 
-          let avisoCaptura = document.getElementById(`avisoCaptura${idAquario}`)
-          avisoCaptura.innerHTML = ""
+          for(var i = 0; i < novoRegistro.length; i++){
+            if (novoRegistro[i].mediaTanque == dados.datasets[0][dados.datasets[0].data[i]]){
+              dadosAtualizados = true
+            }
+          }
 
-
-          if (novoRegistro[0].momento_grafico == dados.labels[dados.labels.length - 1]) {
+          if (dadosAtualizados) {
             console.log("---------------------------------------------------------------")
             console.log("Como não há dados novos para captura, o gráfico não atualizará.")
-            avisoCaptura.innerHTML = "<i class='fa-solid fa-triangle-exclamation'></i> Foi trazido o dado mais atual capturado pelo sensor. <br> Como não há dados novos a exibir, o gráfico não atualizará."
-            console.log("Horário do novo dado capturado:")
-            console.log(novoRegistro[0].momento_grafico)
-            console.log("Horário do último dado capturado:")
-            console.log(dados.labels[dados.labels.length - 1])
             console.log("---------------------------------------------------------------")
           } else {
-            // tirando e colocando valores no gráfico
-            dados.labels.shift(); // apagar o primeiro
-            dados.labels.push(novoRegistro[0].momento_grafico); // incluir um novo momento
 
-            dados.datasets[0].data.shift();  // apagar o primeiro de umidade
-            dados.datasets[0].data.push(novoRegistro[0].umidade); // incluir uma nova medida de umidade
-
-            dados.datasets[1].data.shift();  // apagar o primeiro de temperatura
-            dados.datasets[1].data.push(novoRegistro[0].temperatura); // incluir uma nova medida de temperatura
+            for(var i = 0; i < novoRegistro.length; i++){
+              // tirando e colocando valores no gráfico
+              dados.labels[i] = novoRegistro[i].nomeTanque; // incluir um novo momento
+              dados.datasets[0].data[i] = novoRegistro[i].mediaTanque; // incluir uma nova medida de temperatura
+            }
 
             myChart.update();
           }
 
           // Altere aqui o valor em ms se quiser que o gráfico atualize mais rápido ou mais devagar
-          proximaAtualizacao = setTimeout(() => atualizarGrafico(idAquario, dados, myChart), 2000);
+          proximaAtualizacao = setTimeout(() => atualizarGrafico(dados, myChart), 2000);
         });
       } else {
         console.error('Nenhum dado encontrado ou erro na API');
         // Altere aqui o valor em ms se quiser que o gráfico atualize mais rápido ou mais devagar
-        proximaAtualizacao = setTimeout(() => atualizarGrafico(idAquario, dados, myChart), 2000);
+        proximaAtualizacao = setTimeout(() => atualizarGrafico(dados, myChart), 2000);
       }
     })
       .catch(function (error) {
