--- a/grupo/Sites/public/Dash/dashborad.html
+++ b/grupo/Sites/public/Dash/dashborad.html
@@ -77,7 +77,7 @@
             <h3>Qtd. tanques</h3>
           </div>
           <div class="dados">
-            <h1>2</h1>
+            <h1 id="h1_qtdTanques"></h1>
           </div>
         </div>
         <div class="kpis">
@@ -85,7 +85,7 @@
             <h3>Qtd. Sensores</h3>
           </div>
           <div class="dados">
-            <h1>3</h1>
+            <h1 id="h1_qtdSensores">3</h1>
           </div>
         </div>
         <div class="kpis">
@@ -93,7 +93,7 @@
             <h3>Alertas</h3>
           </div>
           <div class="dados">
-            <h1>0</h1>
+            <h1 id="h1_qtdAlerta">0</h1>
           </div>
         </div>
       </div>
@@ -168,7 +168,7 @@
       .catch(function (error) {
         console.error(`Erro na obtenção dos dados p/ gráfico: ${error.message}`);
       });
-
+    buscarKpis()
     alertaTanque()
     setInterval(() => {
       alertaTanque()
@@ -300,8 +300,8 @@
           console.log(dados);
           var dadosAtualizados = false;
 
-          for(var i = 0; i < novoRegistro.length; i++){
-            if (novoRegistro[i].mediaTanque == dados.datasets[0][dados.datasets[0].data[i]]){
+          for (var i = 0; i < novoRegistro.length; i++) {
+            if (novoRegistro[i].mediaTanque == dados.datasets[0][dados.datasets[0].data[i]]) {
               dadosAtualizados = true
             }
           }
@@ -312,7 +312,7 @@
             console.log("---------------------------------------------------------------")
           } else {
 
-            for(var i = 0; i < novoRegistro.length; i++){
+            for (var i = 0; i < novoRegistro.length; i++) {
               // tirando e colocando valores no gráfico
               dados.labels[i] = novoRegistro[i].nomeTanque; // incluir um novo momento
               dados.datasets[0].data[i] = novoRegistro[i].mediaTanque; // incluir uma nova medida de temperatura
@@ -353,6 +353,7 @@
                 span_nome_tanque.innerHTML = alerta[0].nomeTanque
                 span_temp_tanque.innerHTML = alerta[0].mediaTanque
                 span_setor_tanque.innerHTML = alerta[0].setorTanque
+                buscarKpis()
               } else {
                 Modal_alerta_tanque.style.display = 'none'
                 span_nome_tanque.innerHTML = ''
@@ -366,4 +367,20 @@
       })
   }
 
+  function buscarKpis() {
+    fetch(`/empresas/kpisEmpresa/${fkEmpresa}`, { cache: "no-store" })
+      .then(function (response) {
+        if (response.ok) {
+          response.json().then(function (resposta){
+            console.log(resposta)
+            var qtdTanques = document.getElementById('h1_qtdTanques')
+            var qtdSensores = document.getElementById('h1_qtdSensores')
+            var qtdAlerta = document.getElementById('h1_qtdAlerta')
+            qtdTanques.innerHTML = resposta[0].qtdTanque
+            qtdSensores.innerHTML = resposta[0].qtdSensor
+            qtdAlerta.innerHTML = resposta[0].qtdAlertas
+          })
+        }
+      })
+  }
 </script>
