Atualização de css e alguns detalhes

--- a/grupo/Sites/public/Dash/dash-tanque.html
+++ b/grupo/Sites/public/Dash/dash-tanque.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Dashboard - Tanques</title>
     <link rel="icon" type="image/x-icon" href="../src/Logo-icon.png">
+    <script src="../js/session.js"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Chewy&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
@@ -20,7 +21,7 @@
     </style>
 </head>
 
-<body onload="iniciar()">
+<body onload=" validarSessao(), iniciar()">
     <div class="div-pai">
         <!-- Menu Lateral -->
         <div class="container-lateral">
@@ -45,10 +46,10 @@
                     </div> -->
                 </div>
                 <div class="sair links">
-                    <a href="../index.html">
+                    <span class="span-sair" onclick="limparSessao()">
                         <img src="../src/icon-desconectar.png" alt="Icon">
                         Desconectar
-                    </a>
+                    </span>
                 </div>
             </div>
         </div>
@@ -63,7 +64,7 @@
                 <div class="funcionario">
                     <div>
                         <p>Bem Vindo</p>
-                        <p>Convidado</p>
+                        <p id="p_NomeUsuario">Convidado</p>
                     </div>
                     <div>
                         <img src="../src/icon-perfil.png" alt="Foto">
